# TrustLens

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
docker/api/: Dockerfile
infra/airflow/dags/: trustlens_scoring_dag.py
infra/clickhouse/: init.sql
infra/superset/: bootstrap.sh  superset_config.py
notebooks/: 01_eda.ipynb  02_deepfake_efficientnet.ipynb  02b_deepfake_efficientnet_kaggle.ipynb  trustlens_day2_kaggle.ipynb
scripts/: download_140k_faces.sh  download_midv500.sh  make_fixtures.py  train_baseline.py  train_deepfake.py
src/trustlens/: __init__.py  config.py
src/trustlens/api/: main.py
src/trustlens/data/: __init__.py  fixtures.py
src/trustlens/heuristics/: __init__.py  classifier.py  ela.py  exif.py  fft.py
src/trustlens/metrics/: __init__.py  metrics.py
src/trustlens/models/: __init__.py  dataset.py  efficientnet.py  splits.py  transforms.py
src/trustlens/training/: __init__.py  evaluate.py  train.py
tests/: conftest.py  test_classifier.py  test_ela.py  test_exif.py  test_fft.py  test_metrics.py  test_model.py  test_ood_report.py  test_splits.py
