[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trustlens"
version = "0.1.0"
description = "Tiered image & document fraud detection (Tier-1 heuristics baseline)"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.24",
    "pillow>=10.0",
    "piexif>=1.1.3",
    "joblib>=1.3",
    "pandas>=2.0",
]

[project.optional-dependencies]
# scikit-learn is optional: fit() has a numpy fallback with the same semantics.
ml = ["scikit-learn>=1.3"]
api = ["fastapi>=0.110", "uvicorn[standard]>=0.29", "python-multipart>=0.0.9"]
notebook = ["jupyter>=1.0", "matplotlib>=3.7", "seaborn>=0.13"]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
